--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nertflix-clone",
+  "name": "messenger-clone",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,37 +10,43 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.10.2",
-    "@types/bcrypt": "^5.0.2",
-    "@types/lodash": "^4.17.0",
-    "@types/react-slick": "^0.23.13",
-    "axios": "^1.6.8",
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/node": "20.11.20",
+    "@types/react": "18.2.58",
+    "@types/react-dom": "18.2.19",
+    "autoprefixer": "10.4.17",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.0",
+    "react-multi-carousel": "^2.8.5",
     "lodash": "^4.17.21",
-    "next": "^14.2.1-canary.3",
-    "next-auth": "^4.24.7",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.2",
+    "next": "14.1.0",
+    "next-auth": "^4.24.6",
+    "next-cloudinary": "^6.0.1",
+    "next-superjson-plugin": "^0.5.7",
+    "postcss": "8.4.35",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-multi-carousel": "^2.8.5",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
+    "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.3.3",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "prisma": "^5.10.2",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.14.202",
+    "prisma": "^5.10.2"
   }
 }
