--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://huyhoangpham100200:huyhoangpham100200@cluster0.jm6xxsy.mongodb.net/test"
+DATABASE_URL="mongodb+srv://huyhoangpham100200:huyhoangpham100200@cluster0.asxfevk.mongodb.net/text"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
